# TECHIT-FinalProject

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  run.sh
.github/workflows/: aws-action.yml  backend-action.yml  docker-action.yml  frontend-action.yml
Kubernetes/: Cargo.toml
aws/: Cargo.toml
backend/: .env  Cargo.toml  Cargo.toml~
backend/src/: lib.rs  lib.rs~  main.rs  main.rs~  server.rs  server.rs~
backend/src/api/: data_table.rs  mod.rs  register.rs~  register_api.rs
backend/src/utils/: mod.rs~  postgre_sql.rs  postgre_sql.rs~
frontend/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: app.rs  index.html~  lib.rs  lib.rs~  main.rs  main.rs~  route.rs  route.rs~  router.rs
frontend/src/api/: github_other.rs  mod.rs  types.rs  types.rs~
frontend/src/handlers/: mod.rs  mod.rs~
frontend/src/pages/: mod.rs
frontend/src/pages/auth/: mod.rs  signin.rs
frontend/src/pages/css/: header_style.rs
frontend/src/utils/: mod.rs
frontend/src/views/: amm.rs  index.rs  mod.rs  notfound.rs  register.rs  signin.rs
frontend/src/views/auth/: directions.rs  mod.rs  mod.rs~  register.rs  signin.rs
frontend/src/views/css/: footer_style.rs  header_style.rs  index_style.rs  mod.rs  signin_style.rs
frontend/src/views/management/: cost_management.rs  mod.rs
frontend/src/views/style/: mod.rs  register_style.rs  register_style.rs~  stylesheet.rs
kubernetes/: App.toml  Cargo.toml
kubernetes/src/: api.rs  config.rs  lib.rs  main.rs
kubernetes/src/ui/: display.rs  mod.rs
terraform/: main.tf  variables.tf
tool/: Cargo.toml  build.rs
tool/src/: main.rs
회고록/: 1Day.md  1to4Week.md  2Day.md  3Day.md  4Day.md  4Day.md~  ELK.md
회고록/1Week/: 1Day.md  5Day.md
회고록/2Week/: 1Day.md  2Days.md
