[package]
name = "aws"
authors = ["Choigunwoo <gunwoo8873@outlook.kr"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = {version = "0.13.0"}
tokio = {version = "1.40.0", features = ["macros", "io-util", "sync", "rt-multi-thread"]}
serde_json = {version = "1.0.128"}