[package]
name = "backend"
authors = ["Choigunwoo <gunwoo8873@outlook.kr"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
dotenv = {workspace = true}
chrono = {workspace = true}

[dependencies.actix-web]
version = "4.9.0"

[dependencies.actix-cors]
version = "0.7.0"

[dependencies.sqlx]
version = "0.8.2"
features = ["postgres", "runtime-tokio"]

#reqwest = {version = "0.12.8", features = ["json"]}