[package]
name = "frontend"
authors = ["Choigunwoo <gunwoo8873@outlook.kr"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

#### Yew
[dependencies.yew]
version = "0.21.0"
features = ["csr"]

[dependencies.yew-router]
version = "0.18.0"

#### Webassambly
[dependencies.wasm-bindgen]
version = "0.2.93"

[dependencies.wasm-bindgen-futures]
version = "0.4.43"

[dependencies.web-sys]
version = "0.3.70"
features = ["Request", "RequestInit", "Response"]

#### Wab Network
[dependencies.gloo-net]
version = "0.6.0"
#ehttp = {version = "0.5.0"}

[dependencies.anyhow]
version = "1.0.89"

#### Error
#thiserror = {version = "1.0.38"}
#log = {version = "0.4.22"}
#regex = "1.11.0"
#reqwest = "0.12.8"