[package]
name = "kubernetes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

[dependencies.kube]
version = "0.95.0"
features = ["runtime", "derive"]

[dependencies.k8s-openapi]
version = "0.23.0"
features = ["latest"]

[dependencies.ratatui]
version = "0.28.1"

[dependencies.crossterm]
version = "0.28.1"