[package]
name = "tool"
version = "0.1.0"
edition = "2021"

#### GUI
[dependencies.slint]
version = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"

#### Kubernetes
[dependencies.k8s-openapi]
version = "0.23.0"
features = ["latest"]

[dependencies.kube]
version = "0.95.0"
features = ["derive"]

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
dotenv = {workspace = true}